# VIP_Trainer_App

./: .gitignore  README.md  Region_Component_Table.json  app.py  pyproject.toml  script.js  streamlit_app.py
.streamlit/: config.toml  secrets.example.toml
APAC INTEGRATION/: README.md  app.py  db.py  pdf_export.py  requirements.txt  schedule_data.py  training_dashboard.db
app_pages/: login.py  trainee_case_workspace.py  trainee_cases.py  trainer_add_trainee.py  trainer_case_workspace.py  trainer_cases.py  trainer_dashboard.py
ct_training_tracker/: IMPLEMENTATION_PLAN.md  README.md  app.py  config.py  requirements.txt
ct_training_tracker/tests/: test_auth.py  test_metrics.py
docs/: environments.md  implementation-plan.md
src/ct_training_tracker/: analytics.py  application.py  auth.py  case_labels.py  files.py  metrics.py  models.py  questions.py  repository.py  revisions.py  routing.py  runtime.py
supabase/migrations/: 20260721021500_create_ct_training_foundation.sql  20260721033300_link_trainees_by_email.sql  20260721035000_assign_homework.sql  20260721040500_case_file_review.sql  20260721043000_trainee_waiting_indicators.sql  20260721044500_file_level_waiting_and_size_limit.sql  20260721050000_revisions_and_corrections.sql  (+7 more)
templates/: cases.html  index.html  old_form.html  page1.html  page2.html  page3.html  sets.html  traineess.html
tests/: test_analytics.py  test_config.py  test_file_links.py  test_files.py  test_metrics.py  test_paste_image.py  test_publish_review.py  test_questions.py  test_repository.py  test_revisions.py  test_trainee_view.py
(+16 files in other folders)
