[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-training-tracker"
version = "0.1.0"
description = "CT disposition and planning initial-training tracker"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.2",
  "streamlit>=1.36.0",
  "supabase",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
